[package]
name = "stm32f439zi_startup"
version = "0.1.0"
edition = "2021"
authors = ["Jonah Saltzman <jonahsaltzman@gmail.com>"]

[dependencies]
cortex-m-rt = "0.7.3"
panic-itm = "0.4.2"
stm32f4 = "0.15.1"

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm"]

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["defmt", "stm32f439"]